	  Disable tests that fail to compile due to bug #2874.
	* support/regression/tests/bug-2663.c,
	  support/regression/tests/bug-2767.c,
	  support/regression/tests/bug-716242.c,
	  support/regression/tests/bug1908493.c,
	  support/regression/tests/bug2077267.c,
	  support/regression/tests/bug3379723.c:
	  Disable tests that are unlikely to compile for pdk14 anytime soon.

2019-02-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/ralloc.c,
	  support/regression/tests/bug-2031.c:
	  Allow rematerialization of pointer-to-integer cast, fixes a gbz80 initialization bug.

2019-02-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c,
	  src/pdk/ralloc.c:
	  Fix various pdk issues.
	* support/regression/tests/bug-1918.c,
	  support/regression/tests/bug-2124.c,
	  support/regression/tests/bug-2271.c,
	  support/regression/tests/bug-2274.c,
	  support/regression/tests/bug-2305.c,
	  support/regression/tests/bug-2349.c,
	  support/regression/tests/bug-2373.c,
	  support/regression/tests/bug-2455.c,
	  support/regression/tests/bug-2497.c:
	  Disable tests that are unlikely to compile for pdk14 anytime soon.

2019-02-12 Philipp Klaus Krause <pkk AT spth.de>

	* src/pdk/gen.c:
	  Use ltabl for pdk15, improve shifts.
	* src/SDCCglue.c:
	  Fix initialization of bit-fields in code space for pdk.

2019-02-12 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCicode.c: fix bug #2829

2019-02-11 Philipp Klaus Krause <pkk AT spth.de>

	* support/regression/ports/pdk14/support.c:
	  Make regression tests compile, even before simulator is ready.
	* device/lib/pdk14/Makefile.in,
	  device/lib/pdk15/Makefile.in:
	  Enable a missing support function.
	* src/pdk/gen.c:
	  Improve bit-field access.

2019-02-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* src/pdk/gen.c:
	  Fix handling of wide return values.

2019-02-11 Philipp Klaus Krause <krauseph AT informatik.uni-freiburg.de>

	* sim/ucsim/z80.src/inst_ed.c:
	  Implement Z80/Z180/eZ80 rld, rrd.